--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ joblib==1.5.2
 numpy==2.3.3
 pandas==2.3.3
 python-dateutil==2.9.0.post0
+python-sat==1.8.dev24
 pytz==2025.2
 scikit-learn==1.7.2
 scipy==1.16.2
